# YogaTabletPlexPlayer

./: .gitignore  Agent.md  Cargo.toml  README.md  config.example.toml  start.sh
.github/workflows/: windows-win32.yml
packaging/windows/: config.toml
src/: app.rs  cache.rs  config.rs  main.rs  models.rs  player.rs  plex.rs  touch_keyboard.rs
src/ui/: mod.rs  poster_grid.rs
